add rooms list to inn#show

--- a/config/locales/room_booleans.pt-BR.yml
+++ b/config/locales/room_booleans.pt-BR.yml
@@ -2,7 +2,7 @@ pt-BR:
   amenities:
     has_bathroom:
       true: Possui banheiro próprio
-      false: Não possui banheiro próprio]
+      false: Não possui banheiro próprio
     has_balcony:
       true: Possui varanda
       false: Não possui varanda
