add nav bar search feature for app

--- a/config/locales/inns.pt-BR.yml
+++ b/config/locales/inns.pt-BR.yml
@@ -3,7 +3,7 @@ pt-BR:
     models:
       inn:
         one: Pousada
-        others: Pousadas
+        other: Pousadas
     attributes:
       inn:
         brand_name: Nome fantasia
