add changes to navigation bar
change the new_user_registration link
in the navigation bar from 'Seja um
Pousadeiro' to 'Criar uma conta', to
avoid confusion for non-host users on
how to create a new account.

add new locale attribute names for user
model

--- a/config/locales/user.pt-BR.yml
+++ b/config/locales/user.pt-BR.yml
@@ -7,3 +7,6 @@ pt-BR:
     attributes:
       user:
         email: E-mail
+        first_name: Nome
+        last_name: Sobrenome
+        personal_id_number: CPF
